Страница авторизации и компонент Input

--- a/src/components/UI/Button/Button.scss
+++ b/src/components/UI/Button/Button.scss
@@ -36,4 +36,8 @@
     &_success {
         background-color: rgba(161, 240, 69, 1);
     }
+
+    &:not(:last-child) {
+        margin-right: 20px;
+    }
 }
