Валидация формы авторизации

--- a/src/components/UI/Input/Input.scss
+++ b/src/components/UI/Input/Input.scss
@@ -22,6 +22,8 @@
         color: #f01f30;
         font-size: 12px;
         font-weight: bold;
+        margin-bottom: 10px;
+        display: block;
     }
 
     &.invalid {
